--- a/resources/js/pages/Products/Products.css
+++ b/resources/js/pages/Products/Products.css
@@ -1,8 +1,7 @@
 .productsPage .fixed_bg {
-  background: url(/assets/images/products/bg.png) no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+  background-position: center !important;
+  background-size: cover !important;
+  background-attachment: fixed !important;
 }
 .productsPage .showcase {
   height: 266px;
@@ -49,6 +48,12 @@
   opacity: 0.5;
   margin: 0 5px;
   font-size: 16px;
+}
+.pagination a {
+    color: #05185a;
+    opacity: 0.5;
+    margin: 0 5px;
+    font-size: 16px;
 }
 .pagination .active {
   opacity: 1;
