--- a/resources/js/pages/SingleProduct/SingleProduct.css
+++ b/resources/js/pages/SingleProduct/SingleProduct.css
@@ -44,6 +44,13 @@
   padding-bottom: 5px;
   margin-bottom: 15px;
 }
+.SingleProduct .details .no_stock {
+    color: #5a0505;
+    opacity: 0.5;
+    border-bottom: #ecf0f7 1px solid;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+}
 .SingleProduct .view {
   width: 50%;
   margin-right: 50px;
