--- a/resources/nowa/assets/scss/style.scss
+++ b/resources/nowa/assets/scss/style.scss
@@ -1,7 +1,7 @@
 /*------------------------------------------------------------------
 [Master Stylesheet]
 
-Project        :   NOWA - HTML5 Bootstrap Admin Template
+Project        :   Insite - Admin Panel
 Version        :   V.1
 Copyright      :   Spruko Technologies Private Limited 
 Author         :   SprukoSoft
