--- a/resources/js/Layouts/AppRus.css
+++ b/resources/js/Layouts/AppRus.css
@@ -1,15 +1,15 @@
 @font-face {
-    font-family: "nux";
+    font-family: "roboto";
     src: url(/assets/fonts/Roboto-Regular.ttf);
 }
 *,
 *::after,
 *::before {
-    font-family: "nux";
+    font-family: "roboto";
 }
 body {
-    font-family: "nux";
+    font-family: "roboto";
 }
 .bold {
-    font-family: "nux";
+    font-family: "roboto";
 }
