--- a/resources/js/components/Navbar/Navbar.css
+++ b/resources/js/components/Navbar/Navbar.css
@@ -1,37 +1,48 @@
 .nav_link {
-  margin-right: 40px;
-  text-transform: uppercase;
-  font-size: 20px;
-  position: relative;
+    margin-right: 40px;
+    text-transform: uppercase;
+    font-size: 20px;
+    position: relative;
 }
 .nav_link::after {
-  width: 73px;
-  height: 3px;
-  left: 50%;
-  bottom: -10px;
-  transform: translateX(-50%) scaleX(0);
-  transform-origin: center;
-  background-color: #05185a;
-  transition: 0.4s;
+    width: 73px;
+    height: 3px;
+    left: 50%;
+    bottom: -10px;
+    transform: translateX(-50%) scaleX(0);
+    transform-origin: center;
+    background-color: #05185a;
+    transition: 0.4s;
 }
 .nav_link:hover::after,
 .nav_link.active::after {
-  transform: translateX(-50%) scaleX(1);
+    transform: translateX(-50%) scaleX(1);
 }
 @media screen and (max-width: 1500px) {
-  .nav_link {
-    font-size: 16px;
-  }
+    .nav_link {
+        font-size: 16px;
+    }
 }
 @media screen and (max-width: 900px) {
-  .nav_link {
-    margin-right: 18px;
-    font-size: 14px;
-  }
+    .nav_link {
+        margin-right: 18px;
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .nav_link {
+        margin-right: 11px;
+        font-size: 12px;
+    }
+    .nav_link::after {
+        width: 51px;
+        height: 1px;
+        bottom: 0px;
+    }
 }
 @media screen and (max-width: 500px) {
-  .nav_link {
-    margin-right: 10px;
-    font-size: 12px;
-  }
+    .nav_link {
+        margin-right: 10px;
+        font-size: 10px;
+    }
 }
