--- a/resources/js/components/Header/Header.css
+++ b/resources/js/components/Header/Header.css
@@ -47,6 +47,9 @@
     transform: rotate(0) scale(1) translateY(0) translateX(0);
     opacity: 1;
 }
+.header .languages:hover .lang_drop a {
+    display: block;
+}
 
 @media screen and (max-width: 1500px) {
     .header {
