--- a/resources/js/pages/Products/Products.css
+++ b/resources/js/pages/Products/Products.css
@@ -1,7 +1,10 @@
 .productsPage .fixed_bg {
-  background-position: center !important;
-  background-size: cover !important;
-  background-attachment: fixed !important;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 .productsPage .showcase {
   height: 266px;
