refactor background image.

--- a/public/css/AppEng.css
+++ b/public/css/AppEng.css
@@ -1,21 +1,1 @@
-@font-face {
-    font-family: "worksans";
-    src: url(/fonts/WorkSans-Regular.ttf);
-}
-@font-face {
-    font-family: "playfair";
-    src: url(/fonts/PlayfairDisplay-VariableFont_wght.ttf);
-}
-*,
-*::after,
-*::before {
-    font-family: "worksans";
-}
-body {
-    font-family: "worksans";
-
-}
-.playfair {
-    font-family: "playfair";
-}
-
+@font-face{font-family:worksans;src:url(/fonts/WorkSans-Regular.ttf)}@font-face{font-family:playfair;src:url(/fonts/PlayfairDisplay-VariableFont_wght.ttf)}*,:after,:before,body{font-family:worksans}.playfair{font-family:playfair}
