--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,118 @@
-*,:after,:before{box-sizing:border-box;margin:0;padding:0;scroll-behavior:smooth}:after,:before{content:"";position:absolute}::-webkit-scrollbar{width:7px}::-webkit-scrollbar-track{background:#272639}::-webkit-scrollbar-thumb{background:#e81748b6}::-webkit-scrollbar-thumb:hover{background:#e81748}html{box-sizing:border-box}body{background:#fff;color:#334e60;font-size:16px;font-weight:400;line-height:1.3;overflow-x:hidden;scroll-behavior:smooth}p{font-weight:100;line-height:1.5}h1{font-weight:600}ul{list-style:none}a{color:inherit;outline:none;text-decoration:none}button,input,textarea{background:none;border:none;outline:none}button{cursor:pointer}select{border:none;outline:none}img{height:auto;max-width:100%}.img{overflow:hidden}.img img{height:100%;-o-object-fit:cover;object-fit:cover;width:100%}.wrapper{height:100%;margin:auto;position:relative;width:1400px}.flex{align-items:center;display:flex;justify-content:space-between}.circle,.flex.centered{justify-content:center}.circle{align-items:center;border:2px solid #fff;border-radius:50%;display:flex;height:62px;width:62px}.circle.dark{border:2px solid #334e60}@media screen and (max-width:1550px){.wrapper{width:95%}}
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+*::after,
+*::before {
+    position: absolute;
+    content: "";
+}
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #272639;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #e81748b6;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #e81748;
+}
+
+html {
+    box-sizing: border-box;
+}
+body {
+    font-weight: 400;
+    line-height: 1.3;
+    color: #334e60;
+    background: #fff;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    font-size: 16px;
+}
+p {
+    font-weight: 100;
+    line-height: 1.5;
+}
+h1 {
+    font-weight: 600;
+}
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+    outline: none;
+}
+input,
+textarea,
+button {
+    outline: none;
+    border: none;
+    background: none;
+}
+button {
+    cursor: pointer;
+}
+select {
+    border: none;
+    outline: none;
+}
+img {
+    height: auto;
+    max-width: 100%;
+}
+.img {
+    overflow: hidden;
+}
+.img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+}
+.wrapper {
+    width: 1400px;
+    height: 100%;
+    margin: auto;
+    position: relative;
+}
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.flex.centered {
+    justify-content: center;
+}
+.circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 62px;
+    height: 62px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+.circle.dark {
+    border: 2px solid #334e60;
+}
+
+@media screen and (max-width: 1550px) {
+    .wrapper {
+        width: 95%;
+    }
+}
+
