--- a/resources/js/pages/SingleProduct/SingleProduct.css
+++ b/resources/js/pages/SingleProduct/SingleProduct.css
@@ -131,24 +131,40 @@
     top: 0;
     background-color: #000000e0;
     z-index: 10000;
+    transition: 1s;
 
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+}
+.SingleProduct .popup_background::before {
+    content: "×";
+    font-size: 40px;
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    top: 30px;
+    right: 50px;
 }
 .SingleProduct .popup_background.show {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
 .SingleProduct .slider_popup {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     z-index: 100001;
     width: 1200px;
+    transition: 0.5s;
 
-    display: none;
+    transform: translate(-50%, -100%);
+    opacity: 0;
+    visibility: hidden;
 }
 .SingleProduct .slider_popup.show {
-    display: block;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    visibility: visible;
 }
 .SingleProduct .slider_popup .slider_2 {
     display: none;
