--- a/resources/js/pages/SingleProduct/SingleProduct.css
+++ b/resources/js/pages/SingleProduct/SingleProduct.css
@@ -144,6 +144,7 @@
     height: 30px;
     top: 30px;
     right: 50px;
+    cursor: pointer;
 }
 .SingleProduct .popup_background.show {
     opacity: 1;
